fixed alignment in header

--- a/assets/style.css
+++ b/assets/style.css
@@ -80,7 +80,7 @@ button {
 	text-align: center;
 	float: left;
 	position: relative;
-	left: 150px;
+	left: 130px;
 }
 
 .menu-list {
@@ -89,6 +89,8 @@ button {
 	list-style: none;
 	text-align: right;
 	padding-right: 20%;
+	position: relative;
+	left: 70px;
 
 }
 
